--- a/apache/pom.xml
+++ b/apache/pom.xml
@@ -27,7 +27,10 @@
             <artifactId>junit</artifactId>
             <version>4.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>
     </dependencies>
-
-
 </project>
