--- a/designpattern/pom.xml
+++ b/designpattern/pom.xml
@@ -41,4 +41,15 @@
         <!-- cglib动态代理结束 -->
     </dependencies>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                    <include>**/*.properties</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 </project>
