--- a/designpattern/pom.xml
+++ b/designpattern/pom.xml
@@ -39,6 +39,13 @@
             <version>2.2</version>
         </dependency>
         <!-- cglib动态代理结束 -->
+
+        <!-- 代理模式用到 -->
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.3</version>
+        </dependency>
     </dependencies>
 
     <build>
